[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "mydownloaderbot"
version = "0.1.0"
[tool.poetry.dependencies]
mutagen = "^1.45.1"
python = "^3.8"
python-telegram-bot = "^13.14"
pytube = "^12.1.0"
requests = "^2.28.1"
spotdl = "^4.0.5"
validators = "^0.18.2"
wget = "^3.2"
[tool.poetry.dev-dependencies]
