[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=1.5.1"]

[tool]
[tool.poetry]
authors = ["Arturo Rebolledo <arturoreb2r@outlook.com>"]
description = ""
name = "mydownloaderbot"
version = "0.1.0"
[tool.poetry.dependencies]
mutagen = "^1.45.1"
python = ">=3.8,<=3.11.4"
python-telegram-bot = "^20.4"
pytube = "^15.0.0"
requests = "^2.31.0"
spotdl = "^4.2.0"
validators = "^0.18.2"
ffmpeg = "^1.4"
nest-asyncio = "^1.5.7"
[tool.poetry.dev-dependencies]
