[project]
name = "mydownloaderbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typing-extensions>=4.12.2",
    "typing>=3.10.0.0",
    "pydantic>=2.9.2",
    "openai>=1.54.4",
    "spotdl>=4.2.9",
    "pytube>=15.0.0",
    "python-telegram-bot[webhooks]>=21.7",
    "requests>=2.32.3",
    "ffmpeg>=1.4",
    "nest-asyncio>=1.6.0",
]


